@@ -43,19 +43,19 @@ GW_DEFAULT["BAG_WIDTH"] = 480
 GW_DEFAULT["BAG_REVERSE_SORT"] = true
 
 GW_DEFAULT["BAG_POSITION"] = {}
-GW_DEFAULT["BAG_POSITION"]["point"] = "RIGHT"
-GW_DEFAULT["BAG_POSITION"]["relativePoint"] = "RIGHT"
-GW_DEFAULT["BAG_POSITION"]["xOfs"] = -256
-GW_DEFAULT["BAG_POSITION"]["yOfs"] = 256
+GW_DEFAULT["BAG_POSITION"]["point"] = "TOPRIGHT"
+GW_DEFAULT["BAG_POSITION"]["relativePoint"] = "TOPRIGHT"
+GW_DEFAULT["BAG_POSITION"]["xOfs"] = -20
+GW_DEFAULT["BAG_POSITION"]["yOfs"] = -60
 
 GW_DEFAULT["BANK_WIDTH"] = 720
 GW_DEFAULT["BANK_REVERSE_SORT"] = false
 
 GW_DEFAULT["BANK_POSITION"] = {}
-GW_DEFAULT["BANK_POSITION"]["point"] = "LEFT"
-GW_DEFAULT["BANK_POSITION"]["relativePoint"] = "LEFT"
-GW_DEFAULT["BANK_POSITION"]["xOfs"] = 256
-GW_DEFAULT["BANK_POSITION"]["yOfs"] = 256
+GW_DEFAULT["BANK_POSITION"]["point"] = "TOPLEFT"
+GW_DEFAULT["BANK_POSITION"]["relativePoint"] = "TOPLEFT"
+GW_DEFAULT["BANK_POSITION"]["xOfs"] = 60
+GW_DEFAULT["BANK_POSITION"]["yOfs"] = -60
 
 GW_DEFAULT["HERO_POSITION"] = {}
 GW_DEFAULT["HERO_POSITION"]["point"] = "LEFT"
